first commit, day 1 react bootcamp notes

--- a/react_bootcamp/index.html
+++ b/react_bootcamp/index.html
@@ -10,14 +10,29 @@
 <body>
   <div id='app'>
     <script>
-      const headerElement = React.createElement(
+      const name = "Mel"
+      const handle = "@juiceboxhero"
+      const nameElement = React.createElement(
         'h1',
-        { id: 'header' },
-        'Hello World'
+        null,
+        name
       )
-      console.log(headerElement)
+
+      const handleElement = React.createElement(
+        'h3',
+        null,
+        handle
+      )
+
+      const wrapperElement = React.createElement(
+        'div',
+        { id: 'container' },
+        nameElement,
+        handleElement
+      )
+
       ReactDOM.render(
-        headerElement,
+        wrapperElement,
         document.getElementById('app')
       )
     </script>
