--- a/react_bootcamp/index.html
+++ b/react_bootcamp/index.html
@@ -5,34 +5,32 @@
   <title> First React App </title>
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 
 <body>
   <div id='app'>
-    <script>
+    <script type="text/babel">
       const name = "Mel"
       const handle = "@juiceboxhero"
-      const nameElement = React.createElement(
-        'h1',
-        null,
-        name
-      )
+      function Name(props) {
+        return <h1> {props.name} </h1>
+      }
+      function Handle(props) {
+        return <h3> {props.handle} </h3>
+      }
 
-      const handleElement = React.createElement(
-        'h3',
-        null,
-        handle
-      )
-
-      const wrapperElement = React.createElement(
-        'div',
-        { id: 'container' },
-        nameElement,
-        handleElement
-      )
+      function App() {
+        return (
+          <div id="container">
+            <Name name={name} />
+            <Handle handle={handle} />
+          </div>
+        )
+      }
 
       ReactDOM.render(
-        wrapperElement,
+        <App />,
         document.getElementById('app')
       )
     </script>
